build/log/idf_py_stdout_output_62956
Command: ninja all
[1/15] Linking C static library esp-idf\esp_stdio\libesp_stdio.a
[2/15] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\Users\eugen\Codes\esp\cpp_example\build\bootloader && C:\Users\eugen\.espressif\python_env\idf6.0_py3.12_env\Scripts\python.exe C:/esp/v6.0.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Users/eugen/Codes/esp/cpp_example/build/bootloader/bootloader.bin"
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[3/15] Linking C static library esp-idf\xtensa\libxtensa.a
[4/15] No install step for 'bootloader'
[5/15] Linking C static library esp-idf\esp_ringbuf\libesp_ringbuf.a
[6/15] Linking C static library esp-idf\esp_psram\libesp_psram.a
[7/15] Completed 'bootloader'
[8/15] Linking C static library esp-idf\esp_driver_uart\libesp_driver_uart.a
[9/15] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/lcd/LcdService.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/lcd/LcdService.cpp.obj 
ccache C:\Users\eugen\.espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v6.0.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Users/eugen/Codes/esp/cpp_example/build/config -ID:/Users/eugen/Codes/esp/cpp_example/main -IC:/esp/v6.0.1/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/v6.0.1/esp-idf/components/heap/include -IC:/esp/v6.0.1/esp-idf/components/heap/tlsf -IC:/esp/v6.0.1/esp-idf/components/log/include -IC:/esp/v6.0.1/esp-idf/components/soc/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32 -IC:/esp/v6.0.1/esp-idf/components/soc/esp32/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32/register -IC:/esp/v6.0.1/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0.1/esp-idf/components/hal/esp32/include -IC:/esp/v6.0.1/esp-idf/components/hal/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32 -IC:/esp/v6.0.1/esp-idf/components/esp_common/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0.1/esp-idf/components/esp_stdio/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/esp32/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2s/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_driver_gpio/include -IC:/esp/v6.0.1/esp-idf/components/esp_driver_uart/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_uart/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_uart/esp32/include @"D:/Users/eugen/Codes/esp/cpp_example/build/toolchain/cxxflags" -g -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Users/eugen/Codes/esp/cpp_example=. -fmacro-prefix-map=C:/esp/v6.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++26 -fno-exceptions -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/lcd/LcdService.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\lcd\LcdService.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/lcd/LcdService.cpp.obj -c D:/Users/eugen/Codes/esp/cpp_example/main/lcd/LcdService.cpp
D:/Users/eugen/Codes/esp/cpp_example/main/lcd/LcdService.cpp: In constructor 'LcdService::LcdService()':
D:/Users/eugen/Codes/esp/cpp_example/main/lcd/LcdService.cpp:24:9: error: no match for 'operator=' (operand types are 'uart_config_t' and '<brace-enclosed initializer list>')
   24 |         };
      |         ^
D:/Users/eugen/Codes/esp/cpp_example/main/lcd/LcdService.cpp:24:9: note: there are 2 candidates
In file included from D:/Users/eugen/Codes/esp/cpp_example/main/lcd/LcdService.h:8,
                 from D:/Users/eugen/Codes/esp/cpp_example/main/lcd/LcdService.cpp:5:
C:/esp/v6.0.1/esp-idf/components/esp_driver_uart/include/driver/uart.h:54:3: note: candidate 1: 'constexpr uart_config_t& uart_config_t::operator=(const uart_config_t&)'
   54 | } uart_config_t;
      |   ^~~~~~~~~~~~~
C:/esp/v6.0.1/esp-idf/components/esp_driver_uart/include/driver/uart.h:54:3: note: no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'const uart_config_t&'
C:/esp/v6.0.1/esp-idf/components/esp_driver_uart/include/driver/uart.h:54:3: note: candidate 2: 'constexpr uart_config_t& uart_config_t::operator=(uart_config_t&&)'
C:/esp/v6.0.1/esp-idf/components/esp_driver_uart/include/driver/uart.h:54:3: note: no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'uart_config_t&&'
ninja: build stopped: subcommand failed.
